Closed Bug 924444 Opened 12 years ago Closed 12 years ago

fix various integer comparison warnings in QuartzSupport.mm

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: jaas, Assigned: jaas)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached patch Fix v1.0Splinter Review
0:00.82 QuartzSupport.o 0:01.43 Warning: -Wsign-compare in /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm: comparison of integers of different signs: 'int' and 'uint32_t' (aka 'unsigned int') 0:01.43 /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm:546:14: warning: comparison of integers of different signs: 'int' and 'uint32_t' (aka 'unsigned int') [-Wsign-compare] 0:01.44 if (aWidth == mUnsupportedWidth && 0:01.44 ~~~~~~ ^ ~~~~~~~~~~~~~~~~~ 0:01.44 Warning: -Wsign-compare in /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm: comparison of integers of different signs: 'int' and 'uint32_t' (aka 'unsigned int') 0:01.44 /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm:547:15: warning: comparison of integers of different signs: 'int' and 'uint32_t' (aka 'unsigned int') [-Wsign-compare] 0:01.44 aHeight == mUnsupportedHeight) { 0:01.44 ~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~ 0:01.44 Warning: -Wsign-compare in /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm: comparison of integers of different signs: 'size_t' (aka 'unsigned long') and 'int' 0:01.44 /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm:810:32: warning: comparison of integers of different signs: 'size_t' (aka 'unsigned long') and 'int' [-Wsign-compare] 0:01.44 if (mIOSurface->GetWidth() != width || mIOSurface->GetHeight() != height) { 0:01.44 ~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~ 0:01.44 Warning: -Wsign-compare in /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm: comparison of integers of different signs: 'size_t' (aka 'unsigned long') and 'int' 0:01.44 /Users/josh/src/mozilla/ff_trunk_debug/gfx/2d/QuartzSupport.mm:810:68: warning: comparison of integers of different signs: 'size_t' (aka 'unsigned long') and 'int' [-Wsign-compare] 0:01.44 if (mIOSurface->GetWidth() != width || mIOSurface->GetHeight() != height) { 0:01.44 ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~ 0:01.50 4 warnings generated.
Attachment #814427 - Flags: review?(mstange)
Attachment #814427 - Flags: review?(mstange) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: