Bug 924444: Fix various integer comparison warnings in QuartzSupport.mm. r=mstange